<resources>
    <string name="app_name">Popular Movies</string>

    <string name="error_internet_connection">Please connect to internet!</string>
    <string name="error_loading_list">Sorry, no movies found!</string>
    <string name="error_movie_not_found">Sorry, you selected an unknown movie!</string>

    <string name="sort">Sort by</string>
    <string name="refresh">Refresh</string>
    <string-array name="sort_options">
        <item>Popular</item>
        <item>Top Rated</item>
    </string-array>
    <string name="sort_option_popular">Popular</string>
    <string name="sort_option_top_rated">Top Rated</string>
    <string name="sort_option_upcoming">Upcoming</string>
    <string name="sort_option_favorites">Favorites</string>

    <string name="accept">Accept</string>
    <string name="author">Author:</string>
    <string name="cancel">Cancel</string>
    <string name="category">Category</string>
    <string name="empty_reviews">No reviews found!</string>
    <string name="empty_trailers">No trailers found!</string>
    <string name="movies_detail_poster_description">Poster of the movie</string>
    <string name="no_movies_found">No movies found, please try again.</string>
    <string name="ok">OK</string>
    <string name="original_title">Original Title</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="rating_score">0.0</string>
    <string name="reviews">Reviews</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="title">Title</string>
    <string name="trailers">Trailers</string>

    <!-- Values related to images sizes on urls -->
    <string name="youtube_thumb_endpoint" translatable="false">/1.jpg</string>
    <string name="backdrop_image_size" translatable="false">w780</string>
</resources>
