<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/refresh_movies_item"
        android:icon="@drawable/ic_refresh"
        android:title="@string/sort"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/sort_movies_item"
        android:icon="@drawable/ic_sort_icon"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/popular_menu_item"
                    android:title="@string/sort_option_popular"/>
                <item
                    android:id="@+id/top_rated_menu_item"
                    android:title="@string/sort_option_top_rated"/>
                <item
                    android:id="@+id/favorite_menu_item"
                    android:title="@string/sort_option_favorites"/>
            </group>
        </menu>
    </item>

</menu>