<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.udacity.popularmovies.view.MovieDetailActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/movie_detail_toolbar"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            layout="@layout/toolbar"/>

        <ImageView
            android:id="@+id/movie_detail_poster_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:contentDescription="@string/movies_detail_poster_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_toolbar"/>

        <TextView
            android:id="@+id/movie_detail_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/title"
            android:textAllCaps="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_toolbar"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <TextView
            android:id="@+id/movie_detail_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_name_title"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <TextView
            android:id="@+id/movie_detail_original_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/original_title"
            android:textAllCaps="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_name_text"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <TextView
            android:id="@+id/movie_detail_original_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_original_name_title"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <TextView
            android:id="@+id/movie_detail_release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/release_date"
            android:textAllCaps="true"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_original_name_text"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <TextView
            android:id="@+id/movie_detail_release_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_release_date_title"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/movie_detail_score_rating"
            android:numStars="5"
            android:isIndicator="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_release_date_text"
            app:layout_constraintLeft_toRightOf="@id/movie_detail_poster_image"/>

        <TextView
            android:id="@+id/movie_detail_overview_title"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_poster_image"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/movie_detail_overview_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_detail_overview_title"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
